blue-core: reflect